<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img2">

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/why_do_you_want_a_pet"
        android:textColor="@color/black_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/questionTitle">

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/radio_bg"
            android:padding="10dp"
            android:text="@string/i_m_longing_to_care_for_a_pint_sized_companion"
            android:textColor="@color/black_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_bg"
            android:padding="10dp"
            android:text="@string/i_d_like_a_pet_just_like_me_chirpy_and_quirky"
            android:textColor="@color/black_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_bg"
            android:padding="10dp"
            android:text="@string/i_m_longing_to_care_for_a_pint_sized_companion"
            android:textColor="@color/black_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_bg"
            android:padding="10dp"
            android:text="@string/i_d_like_a_pet_just_like_me_chirpy_and_quirky"
            android:textColor="@color/black_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_btn5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_bg"
            android:padding="10dp"
            android:text="@string/i_m_longing_to_care_for_a_pint_sized_companion"
            android:textColor="@color/black_2"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/my_button_bg"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_grp" />


</androidx.constraintlayout.widget.ConstraintLayout>